tests/NormalTests/paczka2/big_fuzzy/35925138.err
Error in line 1: RSGQqxH A666 84,88
Error in line 16: VfnSljQ4lj A666 84,0
Error in line 22: bhlm A666 58,8
Error in line 23: VfnSljQ4lj A988 91,5
Error in line 19: A988 S671 93,9
Error in line 20: RSGQqxH S671 217,2
Error in line 39: bhlm A666 51,5
Error in line 44: CbTbN A666 49,7
Error in line 58: A988 A815 72,6
Error in line 61: A988 A988 49,0
Error in line 62: A988 A815 77,3
Error in line 60: CbTbN A666 47,3
Error in line 40: VfnSljQ4lj A988 223,0
Error in line 76: CbTbN A666 8,57
Error in line 68: A988 A988 32,5
Error in line 81: A988 A815 98,7
Error in line 84: A988 A666 23,4
Error in line 100: qRps1jBxA A815 2,5
Error in line 96: BRqadASHZ1 S671 72,6
Error in line 102: VfnSljQ4lj A815 91,1
Error in line 109: RSGQqxH S671 57,9
Error in line 124: VfnSljQ4lj A815 10,5
Error in line 131: VfnSljQ4lj S671 58,4
Error in line 135: RSGQqxH S671 16,9
Error in line 134: qRps1jBxA A666 33,2
Error in line 132: VfnSljQ4lj A666 85,8
Error in line 136: RSGQqxH A666 21,0
Error in line 137: qRps1jBxA S671 60,6
Error in line 144: qRps1jBxA A666 18,1
Error in line 145: qRps1jBxA A815 24,5
Error in line 157: CbTbN S671 62,9
Error in line 167: VfnSljQ4lj A988 4,6
Error in line 169: VfnSljQ4lj S671 57,2
Error in line 185: VfnSljQ4lj S671 39,19
Error in line 189: CbTbN A666 1%,3
Error in line 181: bhlm S671 91,3
Error in line 196: bhlm A815 90,6
Error in line 197: BRqadASHZ1 A666 27,1
Error in line 207: bhlm A815 26,0
Error in line 215: bhlm A666 20,6
Error in line 218: bhlm S671 30,8
Error in line 191: CbTbN A666 28,5
Error in line 229: A988 A988 -1,6
Error in line 226: A988 A988 12,4
Error in line 233: VfnSljQ4lj A988 99,9
Error in line 248: BRqadASHZ1 S671 22,78
